Bug 396742 - EKOS | Capture | multiple occurrence of the same sequence job ignored
Summary: EKOS | Capture | multiple occurrence of the same sequence job ignored
Status: RESOLVED FIXED
Alias: None
Product: kstars
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.9.5
Platform: Compiled Sources Linux
: NOR major
Target Milestone: ---
Assignee: Jasem Mutlaq
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-07-21 20:38 UTC by Wolfgang Reissenberger
Modified: 2018-07-25 12:34 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Wolfgang Reissenberger 2018-07-21 20:38:06 UTC
When an image sequence contains two identical - for example a LRGBLRGB sequence, only the first occurrence leads to a captured image. The second image with the same filter is not created.

Test case: take 1x1s_RGBLumRGB.esq from Tests/scheduler in the sources directory of kstars.
Comment 1 Jasem Mutlaq 2018-07-22 07:27:04 UTC
You can try to turn off "Remember Job Progress" in Options.
Comment 2 Jasem Mutlaq 2018-07-22 07:59:02 UTC
Well, never mind, it's a bug alright. The scheduler gets stuck on 2/7 and Eric just confirmed it as well.
Comment 3 Wolfgang Reissenberger 2018-07-22 08:24:53 UTC
I took a closer look into the Capture class. There is an approach counting existing images across all sequences. But there is no counterpart determining the target counts of images spanning the contained sequence jobs.

Interestingly, this is fully calculated by the Scheduler - which might be the wrong place...
Comment 4 Jasem Mutlaq 2018-07-22 08:40:30 UTC
Yes I am working on a solution right now for this.
Comment 5 Wolfgang Reissenberger 2018-07-22 09:38:42 UTC
Great! If you need bandwidth, I could take over the fix as well.
Comment 6 Jasem Mutlaq 2018-07-22 10:22:52 UTC
That would be great Wolfgang! It's a bit complicated as now it has to works with also repeated jobs. So even if this works with this sequence, imagine the scheduler commanding a number of them as well.

This is greatly appreciated as I can get time to implement some other features of the next release like driver aliases.
Comment 7 Wolfgang Reissenberger 2018-07-22 12:42:46 UTC
OK, I'll take over. I should place the patch through Phabricator, right?
Comment 8 Jasem Mutlaq 2018-07-22 12:47:38 UTC
That's right, just like the previous patch. However, please use arc to upload the patch so that your information is reserved once I apply it. In the previous commit here: https://cgit.kde.org/kstars.git/commit/?id=7804e618ed41f059475a9a25125e7ea30312cf27

It didn't pull your information. So just make sure to setup Arc and use it submit the patches in the future. Thanks a lot!
Comment 9 Wolfgang Reissenberger 2018-07-22 18:09:46 UTC
OK, thanks for the hint. I've installed arc and will try to use it.
Comment 10 Wolfgang Reissenberger 2018-07-22 20:22:15 UTC
Bug fix submitted as https://phabricator.kde.org/D14280
Comment 11 Jasem Mutlaq 2018-07-24 17:12:40 UTC
Thanks, are you getting updates/discussion we're having on Phabricator?
Comment 12 Wolfgang Reissenberger 2018-07-24 17:28:00 UTC
Yes, Eric made several very good comments. I made all changes he suggested and submitted a new version: https://phabricator.kde.org/D14309

For rebasing: please advise, I do not exactly know what to do.
Comment 13 Jasem Mutlaq 2018-07-24 17:40:47 UTC
Can we continue the discussion in Phabricator? Rebasing simply means you need to sync your fork with master changes up to date and then create the diff again.
Comment 14 Jasem Mutlaq 2018-07-25 12:34:11 UTC
Git commit fadd47d9bcda1682e1950cb8422bbf50cbf3c8ab by Jasem Mutlaq, on behalf of Wolfgang Reissenberger.
Committed on 25/07/2018 at 12:33.
Pushed by mutlaqja into branch 'master'.

Handling multiple occurrence of the same sequence job corrected

Summary:

Capture may handle now multiple occurences of the same sequence
job correctly - e.g. RGBLRGB.

-- Update from Wolfgang: review comments of Eric incorporated.
-- Update from Eric: this is a squash of D14280 and D14309.

Reviewers: wreissenberger, mutlaqja

Reviewed By: mutlaqja

Subscribers: mutlaqja, kde-edu, TallFurryMan

Tags: #kde_edu

Differential Revision: https://phabricator.kde.org/D14357

M  +35   -11   kstars/ekos/capture/capture.cpp
M  +11   -1    kstars/ekos/capture/capture.h
M  +1    -0    kstars/ekos/capture/sequencejob.h

https://commits.kde.org/kstars/fadd47d9bcda1682e1950cb8422bbf50cbf3c8ab