Handling multiple occurrence of the same sequence job corrected

Summary:
BUG: 396742

Capture may handle now multiple occurences of the same sequence
job correctly - e.g. RGBLRGB.

Differential Revision: https://phabricator.kde.org/D14280